<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>
		<variable
			name="viewModel"
			type="com.ick.kalambury.drawing.GameViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="16dp"
		android:paddingStart="16dp"
		android:paddingEnd="16dp">

		<TextView
			android:id="@+id/winner"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:paddingBottom="16dp"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:visibility="gone"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="Winner: Player_123"
			tools:visibility="visible" />

		<TextView
			android:id="@+id/player_list_header"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/dialog_players_title"
			android:textAppearance="?android:attr/textAppearanceLarge"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/winner" />

		<LinearLayout
			android:id="@+id/column_headers"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:orientation="horizontal"
			android:weightSum="10"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/player_list_header">

			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="7"
				android:text="@string/dialog_players_list_nick"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="3"
				android:gravity="center_horizontal"
				android:text="@string/dialog_players_list_points"
				android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/players_list"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:orientation="vertical"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
			app:layout_constraintHeight_default="wrap"
			app:layout_constraintTop_toBottomOf="@+id/column_headers"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			tools:listitem="@layout/list_item_player_score" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
